<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/extra_window_height"
        android:orientation="horizontal"
        android:background="@drawable/background_top">

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="@dimen/extra_window_item_height"
            android:orientation="vertical">

            <TextView
                android:id="@+id/incline"
                style="@style/extra_top_item_textview_style"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/incline_title"
                    style="@style/extra_top_item_subscript_title_textview_style"
                    android:text="@string/incline_title"/>

                <TextView
                    android:id="@+id/incline_unit"
                    style="@style/extra_top_item_subscript_unit_textview_style"
                    android:text="@string/incline_unit"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="174dp"
            android:layout_height="@dimen/extra_window_item_height"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                style="@style/extra_top_item_textview_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_title"
                    style="@style/extra_top_item_subscript_title_textview_style"
                    android:text="@string/time_title"/>

                <TextView
                    android:id="@+id/time_unit"
                    style="@style/extra_top_item_subscript_unit_textview_style"
                    android:text="@string/time_unit"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="@dimen/extra_window_item_height"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                style="@style/extra_top_item_textview_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distance_title"
                    style="@style/extra_top_item_subscript_title_textview_style"
                    android:text="@string/distance_title"/>

                <TextView
                    android:id="@+id/distance_unit"
                    style="@style/extra_top_item_subscript_unit_textview_style"
                    android:text="@string/distance_unit"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="@dimen/extra_window_item_height"
            android:orientation="vertical">

            <TextView
                android:id="@+id/calories"
                style="@style/extra_top_item_textview_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/calories_title"
                    style="@style/extra_top_item_subscript_title_textview_style"
                    android:text="@string/calories_title"/>

                <TextView
                    android:id="@+id/calories_unit"
                    style="@style/extra_top_item_subscript_unit_textview_style"
                    android:text="@string/calories_unit"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="@dimen/extra_window_item_height"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heart_rate"
                style="@style/extra_top_item_textview_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heart_rate_title"
                    style="@style/extra_top_item_subscript_title_textview_style"
                    android:text="@string/heart_rate_title"/>

                <TextView
                    android:id="@+id/heart_rate_unit"
                    style="@style/extra_top_item_subscript_unit_textview_style"
                    android:text="@string/heart_rate_unit"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="@dimen/extra_window_item_height"
            android:orientation="vertical">

            <TextView
                android:id="@+id/speed"
                style="@style/extra_top_item_textview_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/speed_title"
                    style="@style/extra_top_item_subscript_title_textview_style"
                    android:text="@string/speed_title"/>

                <TextView
                    android:id="@+id/speed_unit"
                    style="@style/extra_top_item_subscript_unit_textview_style"
                    android:text="@string/speed_unit"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="500dp"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:gravity="bottom">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_back" />

            <ImageButton
                android:id="@+id/home"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_home"/>

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_menu"/>

            <ImageButton
                android:id="@+id/volume_up"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_volume_up"/>

            <ImageButton
                android:id="@+id/volume_down"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_volume_down"/>

            <ImageButton
                android:id="@+id/mute"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_mute_off"/>

            <ImageButton
                android:id="@+id/channel_plus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_ch_plus"/>

            <ImageButton
                android:id="@+id/channel_minus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:background="@drawable/icon_ch_minus"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>