<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
  	android:visibility="invisible"
   >
    
    <RelativeLayout 
            android:id="@+id/RL_elevator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/elevator_set"
            >
            
    	    <TextView 
  		        android:id="@+id/TV_passwordSet"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:text="@string/passwordSet"
          		  android:textSize="30sp"
          		  android:layout_marginTop="20dp"
          		 android:layout_centerHorizontal="true"
  		        />
    	    
    	    <ImageButton 
    	        android:id="@+id/IB_openPasswordSet"
    	         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_marginLeft="10dp"
          		  android:layout_marginTop="100dp"
    	         android:background="@drawable/green_lock"
    	        />
    	    
    	      <TextView 
  		        android:id="@+id/TV_openPasswordSet"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_alignTop="@+id/IB_openPasswordSet"
          		  android:layout_toRightOf="@+id/IB_openPasswordSet"
          		  android:layout_marginLeft="30dp"
          		  android:text="@string/openPasswordSet"
          		  android:textSize="30sp"	
  		        />
    	      
    	      <TextView 
  		        android:id="@+id/TV_set"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_below="@+id/IB_openPasswordSet"
          		  android:layout_marginTop="20dp"
          		  android:layout_alignLeft="@+id/IB_openPasswordSet"
          		  android:text="@string/set"
          		  android:textSize="30sp"
          		/>
    	      
    	      <TextView 
  		        android:id="@+id/TV_oldPassword"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_below="@+id/TV_set"
          		  android:layout_marginTop="20dp"
          		  android:layout_alignLeft="@+id/TV_set"
          		  android:text="@string/oldPassword"
          		  android:textSize="15sp"
          		/>
    	      
    	       <TextView 
  		        android:id="@+id/TV_oldPasswordShow"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_below="@+id/TV_set"
          		  android:layout_marginTop="20dp"
          		  android:layout_alignLeft="@+id/TV_setDistance"
          		  android:textSize="30sp"
          		  android:clickable="true"
          		  android:background="@drawable/set_distance"
          		/>
    	       
    	       <TextView 
  		        android:id="@+id/TV_newPassword"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_below="@+id/TV_oldPassword"
          		  android:layout_marginTop="40dp"
          		  android:layout_alignLeft="@+id/TV_set"
          		  android:text="@string/newPassword"
          		  android:textSize="15sp"
          		/>
    	       
    	       <TextView 
  		        android:id="@+id/TV_newPasswordShow"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_below="@+id/TV_set"
          		  android:layout_alignTop="@+id/TV_newPassword"
          		  android:layout_alignLeft="@+id/TV_setDistance"
          		  android:clickable="true"
          		   android:textSize="30sp"
          		  android:background="@drawable/set_distance"
          		/>
    	       
    	      <TextView 
  		        android:id="@+id/TV_setDistance"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:textSize="30sp"
          		  android:layout_alignTop="@+id/TV_set"
          		android:layout_centerHorizontal="true"
          		android:textColor="#FFFFFF"
          		android:gravity="center"
          		android:clickable="true"
          		android:background="@drawable/set_distance"/>
    	      
    	      <TextView 
  		        android:id="@+id/TV_segment"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:layout_alignTop="@+id/TV_set"
          		  android:layout_toRightOf="@+id/TV_setDistance"
          		  android:layout_marginLeft="20dp"
          		  android:text="@string/kilometre"
          		  android:textSize="20sp"
          		
          		/>
    	      
    	      <TextView 
  		        android:id="@+id/TV_openPasswordSave"
  		         android:layout_width="wrap_content"
          		  android:layout_height="wrap_content"
          		  android:text="@string/save"
          		  android:textSize="30sp"
          		  android:clickable="true"
          		  android:gravity="center"
          		  android:layout_marginTop="340dp"
          		android:layout_marginLeft="220dp"/>
    	      
          </RelativeLayout>
    

</RelativeLayout>
